fix: battery refresh rate

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -44,6 +44,7 @@
             "warning": 30,
             "critical": 15
         },
+        "interval": 5,
         "format": "{capacity}% {icon}",
         "format-charging": "{capacity}% ",
         "format-plugged": "{capacity}% ",
