feat: gnome-keyring, more multimedia hotkeys. fix: ws name

--- a/.config/sway/config.d/hotkeys.conf
+++ b/.config/sway/config.d/hotkeys.conf
@@ -11,11 +11,17 @@
     bindsym XF86AudioRaiseVolume    exec $raise_volume
     bindsym XF86AudioLowerVolume    exec $lower_volume
     bindsym XF86AudioMute           exec pactl set-sink-mute 0 toggle
-    bindsym Ctrl+XF86AudioMute      exec pactl set-source-mute 0 toggle
+    bindsym Shift+XF86AudioMute      exec pactl set-source-mute 0 toggle
+
     bindsym XF86AudioPlay           exec playerctl play-pause
+    bindsym Shift+Insert            exec playerctl play-pause
     bindsym XF86AudioPrev           exec playerctl previous
+    bindsym Shift+Prior             exec playerctl previous
     bindsym XF86AudioNext           exec playerctl next
+    bindsym Shift+Next              exec playerctl next
+
     bindsym Ctrl+F4                 input type:touchpad events toggle
+
     bindsym XF86MonBrightnessDown   exec $lower_backlight
     bindsym XF86MonBrightnessUp     exec $raise_backlight
 
