--- a/.config/sway/config.d/variables.conf
+++ b/.config/sway/config.d/variables.conf
@@ -25,7 +25,7 @@ set $ws4 4:SBX
 set $ws5 5:GAM
 set $ws6 6:MED
 set $ws7 7:DOC
-set $ws8 8:DFX
+set $ws8 8:GFX
 set $ws9 9:ETC
 
 default_border pixel
