--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule ".vim/pack/dist/opt/vim-better-whitespace"]
-	path = .vim/pack/dist/opt/vim-better-whitespace
-	url = https://github.com/ntpeters/vim-better-whitespace.git
+[submodule ".config/suckless"]
+	path = .config/suckless
+	url = git@github.com:AustralEpitech/suckless.git
+[submodule ".config/nvim/pack/plugins/opt/nvim-lspconfig"]
+	path = .config/nvim/pack/plugins/opt/nvim-lspconfig
+	url = https://github.com/neovim/nvim-lspconfig
