feat: treesitter nvim plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".config/nvim/pack/plugins/opt/nvim-lspconfig"]
 	path = .config/nvim/pack/plugins/opt/nvim-lspconfig
 	url = https://github.com/neovim/nvim-lspconfig
+[submodule ".config/nvim/pack/plugins/opt/nvim-treesitter"]
+	path = .config/nvim/pack/plugins/opt/nvim-treesitter
+	url = https://github.com/nvim-treesitter/nvim-treesitter
