feat: a buch of config

--- a/.config/sway/config.d/40-hotkeys.conf
+++ b/.config/sway/config.d/40-hotkeys.conf
@@ -15,6 +15,9 @@
     bindsym XF86AudioPlay           exec playerctl play-pause
     bindsym XF86AudioPrev           exec playerctl previous
     bindsym XF86AudioNext           exec playerctl next
+    bindsym Ctrl+Insert             exec playerctl play-pause
+    bindsym Ctrl+Prior              exec playerctl previous
+    bindsym Ctrl+Next               exec playerctl next
     bindsym Ctrl+F4                 input type:touchpad events toggle
     bindsym XF86MonBrightnessDown   exec $lower_backlight
     bindsym XF86MonBrightnessUp     exec $raise_backlight
