--- a/.config/alacritty.yml
+++ b/.config/alacritty.yml
@@ -111,14 +111,14 @@ window:
 # Font configuration
 font:
   # Normal (roman) font face
-  #normal:
+  normal:
     # Font family
     #
     # Default:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    #family: monospace
+    family: DejaVuSansMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
