--- a/.config/sway/config.d/10-variables.conf
+++ b/.config/sway/config.d/10-variables.conf
@@ -7,7 +7,7 @@ set $right l
 
 set $menu               dmenu_path | dmenu | xargs swaymsg exec --
 set $term               alacritty
-set $browser            librewolf
+set $browser            firefox
 set $files              thunar
 set $wallpapers         $HOME/.config/wallpapers
 set $lock               swaylock -F -f -i $wallpapers/lock.png
