fix: sway up and down keys

--- a/.config/sway/config.d/10-variables.conf
+++ b/.config/sway/config.d/10-variables.conf
@@ -1,8 +1,8 @@
 set $mod Mod4
 # direction keys
 set $left h
-set $down j
-set $up k
+set $down k
+set $up j
 set $right l
 
 set $menu               dmenu_path | dmenu | xargs swaymsg exec --
