--- a/.config/alacritty.yml
+++ b/.config/alacritty.yml
@@ -118,7 +118,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: DejaVuSansMono Nerd Font
+    family: MesloLGS NF
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
