--- a/.config/sway/config.d/10-variables.conf
+++ b/.config/sway/config.d/10-variables.conf
@@ -8,7 +8,7 @@ set $right l
 set $menu               dmenu_path | dmenu | xargs swaymsg exec --
 set $term               alacritty
 set $browser            firefox
-set $files              thunar
+set $files              pcmanfm
 set $wallpapers         $HOME/.config/wallpapers
 set $lock               swaylock -F -f -i $wallpapers/lock.png
 set $screenshot         grim - | wl-copy
