--- a/.gitmodules
+++ b/.gitmodules
@@ -7,8 +7,8 @@
 [submodule ".config/nvim/pack/plugins/opt/nvim-treesitter"]
 	path = .config/nvim/pack/plugins/opt/nvim-treesitter
 	url = https://github.com/nvim-treesitter/nvim-treesitter
-[submodule ".config/zsh/.oh-my-zsh"]
-	path = .config/zsh/.oh-my-zsh
+[submodule ".config/zsh/ohmyzsh"]
+	path = .config/zsh/ohmyzsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
 [submodule ".pyenv"]
 	path = .pyenv
