--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule ".config/nvim/pack/plugins/opt/black"]
+	path = .config/nvim/pack/plugins/opt/black
+	url = https://github.com/psf/black.git
 [submodule ".config/nvim/pack/plugins/opt/indent-blankline"]
 	path = .config/nvim/pack/plugins/opt/indent-blankline
 	url = https://github.com/lukas-reineke/indent-blankline.nvim.git
@@ -7,8 +10,8 @@
 [submodule ".config/nvim/pack/plugins/opt/nvim-treesitter"]
 	path = .config/nvim/pack/plugins/opt/nvim-treesitter
 	url = https://github.com/nvim-treesitter/nvim-treesitter
-[submodule ".config/zsh/.oh-my-zsh"]
-	path = .config/zsh/.oh-my-zsh
+[submodule ".config/zsh/ohmyzsh"]
+	path = .config/zsh/ohmyzsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
 [submodule ".pyenv"]
 	path = .pyenv
