--- a/.config/sway/config.d/40-hotkeys.conf
+++ b/.config/sway/config.d/40-hotkeys.conf
@@ -10,8 +10,8 @@
     # Hotkeys
     bindsym XF86AudioRaiseVolume    exec $raise_volume
     bindsym XF86AudioLowerVolume    exec $lower_volume
-    bindsym XF86AudioMute           exec pactl set-sink-mute 0 toggle
-    bindsym Ctrl+XF86AudioMute      exec pactl set-source-mute 0 toggle
+    bindsym XF86AudioMute           exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+    bindsym Ctrl+XF86AudioMute      exec pactl set-source-mute @DEFAULT_SINK@ toggle
     bindsym XF86AudioPlay           exec playerctl play-pause
     bindsym XF86AudioPrev           exec playerctl previous
     bindsym XF86AudioNext           exec playerctl next
