--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule ".pyenv"]
 	path = .pyenv
 	url = https://github.com/pyenv/pyenv.git
+[submodule ".config/nvim/pack/plugins/opt/black"]
+	path = .config/nvim/pack/plugins/opt/black
+	url = https://github.com/psf/black.git
