feat: debian specific configuration

--- a/.config/sway/config.d/10-variables.conf
+++ b/.config/sway/config.d/10-variables.conf
@@ -6,7 +6,7 @@ set $up j
 set $right l
 
 set $menu               dmenu_path | dmenu | xargs swaymsg exec --
-set $term               alacritty
+set $term               kitty
 set $browser            firefox
 set $files              pcmanfm
 set $wallpapers         $HOME/.config/wallpapers
