--- a/.config/sway/config.d/30-startup.conf
+++ b/.config/sway/config.d/30-startup.conf
@@ -1,18 +1,14 @@
 # fix slow startup time
 exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 
-# Lock after $screen_timeout
-# Turn off screen after $screem_timeout - 10
+# Turn off screen after $screen_timeout
+# Lock after $screen_timeout + 10s
 # Lock if screen off
-exec swayidle -w \
-         timeout $(($screen_timeout + 10)) "$lock"              \
-         timeout $screen_timeout 'swaymsg "output * dpms off"'  \
-                          resume 'swaymsg "output * dpms on"'   \
-         before-sleep "$lock"
-
-# GTK theme
-exec gsettings set org.gnome.desktop.interface gtk-theme "Materia-dark"
-exec gsettings set org.gnome.desktop.interface icon-theme "Papirus-Dark"
+exec swayidle -w                                           \
+    timeout $(($screen_timeout + 10)) "$lock"              \
+    timeout $screen_timeout 'swaymsg "output * dpms off"'  \
+                     resume 'swaymsg "output * dpms on"'   \
+    before-sleep "$lock"
 
 bar swaybar_command waybar
 
