feat: nvim-treesitter plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule ".pyenv"]
 	path = .pyenv
 	url = https://github.com/pyenv/pyenv.git
+[submodule ".config/nvim/pack/plugins/opt/nvim-treesitter-context"]
+	path = .config/nvim/pack/plugins/opt/nvim-treesitter-context
+	url = https://github.com/nvim-treesitter/nvim-treesitter-context.git
