feat: red window borders

--- a/.config/sway/config.d/10-variables.conf
+++ b/.config/sway/config.d/10-variables.conf
@@ -1,8 +1,8 @@
 set $mod Mod4
 # direction keys
-set $left h
-set $down k
-set $up j
+set $left  h
+set $down  k
+set $up    j
 set $right l
 
 set $menu               dmenu_path | dmenu | xargs swaymsg exec --
@@ -28,6 +28,8 @@ set $ws7 7:DOC
 set $ws8 8:GFX
 set $ws9 9:ETC
 
+#               border      background  text        indicator   child_border
+client.focused  #4c7899     #285577     #ffffff     #2e9ef4     #e00000
 default_border pixel
 gaps inner 4
 gaps outer 4
