--- a/.config/sway/config.d/30-startup.conf
+++ b/.config/sway/config.d/30-startup.conf
@@ -1,5 +1,6 @@
 # fix slow startup time
 exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
+xwayland force
 
 # Turn off screen after $screen_timeout
 # Lock after $screen_timeout + 10s
