feat: new ws naming and sway sway workspace shortcuts

--- a/.config/sway/config.d/40-hotkeys.conf
+++ b/.config/sway/config.d/40-hotkeys.conf
@@ -47,6 +47,10 @@
     bindsym $mod+Shift+$up      move up
     bindsym $mod+Shift+$right   move right
 
+    # Move the focused workspace with the same, but add Control
+    bindsym $mod+Control+$down move workspace to left
+    bindsym $mod+Control+$up   move workspace to right
+
 ## Workspaces:
     # Switch to workspace
     bindsym $mod+1 workspace $ws1
