--- a/.config/sway/config.d/10-variables.conf
+++ b/.config/sway/config.d/10-variables.conf
@@ -24,8 +24,8 @@ set $ws3 3:DEV
 set $ws4 4:SBX
 set $ws5 5:GAM
 set $ws6 6:MED
-set $ws7 7:DOC
-set $ws8 8:GFX
+set $ws7 7:SYS
+set $ws8 8:SRV
 set $ws9 9:ETC
 
 #               border      background  text        indicator   child_border
