fix: set-vol steps

--- a/.config/sway/config.d/40-hotkeys.conf
+++ b/.config/sway/config.d/40-hotkeys.conf
@@ -8,8 +8,8 @@
     bindsym Shift+Print         exec $screenshot_rect
 
     # Hotkeys
-    bindsym XF86AudioRaiseVolume    exec $raise_volume
-    bindsym XF86AudioLowerVolume    exec $lower_volume
+    bindsym XF86AudioRaiseVolume    exec set-vol +5
+    bindsym XF86AudioLowerVolume    exec set-vol -5
     bindsym XF86AudioMute           exec pactl set-sink-mute @DEFAULT_SINK@ toggle
     bindsym Ctrl+XF86AudioMute      exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
     bindsym XF86AudioPlay           exec playerctl play-pause
@@ -19,8 +19,8 @@
     bindsym Ctrl+Prior              exec playerctl previous
     bindsym Ctrl+Next               exec playerctl next
     bindsym Ctrl+F4                 input type:touchpad events toggle
-    bindsym XF86MonBrightnessDown   exec $lower_backlight
-    bindsym XF86MonBrightnessUp     exec $raise_backlight
+    bindsym XF86MonBrightnessUp     exec set-light +10
+    bindsym XF86MonBrightnessDown   exec set-light -10
 
     # Kill focused window
     bindsym $mod+Shift+c kill
