--- a/.config/sway/config.d/30-startup.conf
+++ b/.config/sway/config.d/30-startup.conf
@@ -15,4 +15,5 @@ bar swaybar_command waybar
 
 exec /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
 exec gammastep
+exec blueman-applet
 exec nm-applet --indicator
