--- a/.config/sway/config.d/40-hotkeys.conf
+++ b/.config/sway/config.d/40-hotkeys.conf
@@ -2,6 +2,7 @@
     # Default apps
     bindsym $mod+Return         exec $term
     bindsym $mod+b              exec $browser
+    bindsym $mod+Shift+b        exec $private_browser
     bindsym $mod+e              exec $files
     bindsym $mod+l              exec $lock
     bindsym Print               exec $screenshot
