--- a/.config/sway/config.d/40-hotkeys.conf
+++ b/.config/sway/config.d/40-hotkeys.conf
@@ -9,19 +9,19 @@
     bindsym Shift+Print         exec $screenshot_rect
 
     # Hotkeys
-    bindsym XF86AudioRaiseVolume    exec set-vol +5
-    bindsym XF86AudioLowerVolume    exec set-vol -5
-    bindsym XF86AudioMute           exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-    bindsym Ctrl+XF86AudioMute      exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
-    bindsym XF86AudioPlay           exec playerctl play-pause
-    bindsym XF86AudioPrev           exec playerctl previous
-    bindsym XF86AudioNext           exec playerctl next
-    bindsym Ctrl+Insert             exec playerctl play-pause
-    bindsym Ctrl+Prior              exec playerctl previous
-    bindsym Ctrl+Next               exec playerctl next
-    bindsym Ctrl+F4                 input type:touchpad events toggle
-    bindsym XF86MonBrightnessUp     exec set-light +10
-    bindsym XF86MonBrightnessDown   exec set-light -10
+    bindsym --locked XF86AudioRaiseVolume    exec set-vol +5
+    bindsym --locked XF86AudioLowerVolume    exec set-vol -5
+    bindsym --locked XF86AudioMute           exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+    bindsym --locked Ctrl+XF86AudioMute      exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+    bindsym --locked XF86AudioPlay           exec playerctl play-pause
+    bindsym --locked XF86AudioPrev           exec playerctl previous
+    bindsym --locked XF86AudioNext           exec playerctl next
+    bindsym --locked Ctrl+Insert             exec playerctl play-pause
+    bindsym --locked Ctrl+Prior              exec playerctl previous
+    bindsym --locked Ctrl+Next               exec playerctl next
+    bindsym --locked Ctrl+F4                 input type:touchpad events toggle
+    bindsym --locked XF86MonBrightnessUp     exec set-light +10
+    bindsym --locked XF86MonBrightnessDown   exec set-light -10
 
     # Kill focused window
     bindsym $mod+Shift+c kill
