feat: dwm at startup

--- a/.config/sway/config.d/20-io.conf
+++ b/.config/sway/config.d/20-io.conf
@@ -15,7 +15,7 @@ input type:touchpad {
 }
 
 output {
-    eDP-1 mode --custom 1920x1080@120Hz
+    eDP-1 position 0    0 mode --custom 1920x1080@120Hz 
     DP-3  position 1920 0
     DP-2  position 3840 0
     *     bg $wallpapers/landscape.png fill
