--- a/.config/alacritty.yml
+++ b/.config/alacritty.yml
@@ -110,16 +110,16 @@ env:
   #multiplier: 3
 
 # Font configuration
-font:
+#font:
   # Normal (roman) font face
-  normal:
+  #normal:
     # Font family
     #
     # Default:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: DejaVuSansMono Nerd Font
+    #family: monospace
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
