--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -72,8 +72,8 @@
         "format": "{name}",
     },
     "custom/crypto": {
-        "exec": "crypto.sh",
-        "interval": 600,
+        "exec": "crypto",
+        "interval": 3600,
     }
 }
 
