feat: updated sway config to match dwm

--- a/.config/sway/config.d/10-variables.conf
+++ b/.config/sway/config.d/10-variables.conf
@@ -5,15 +5,15 @@ set $down  k
 set $up    j
 set $right l
 
-set $menu               dmenu_path | dmenu | xargs swaymsg exec --
+set $menu               dmenu_run | xargs swaymsg exec --
 set $term               alacritty
 set $browser            firefox
 set $private_browser    firefox --private-window
 set $files              pcmanfm
 set $wallpapers         $HOME/.config/wallpapers
 set $lock               swaylock -F -f -i $wallpapers/lock.png
-set $screenshot         grim - | wl-copy
-set $screenshot_rect    grim -g "$(slurp)" - | wl-copy
+set $screenshot         flameshot full -c
+set $screenshot_rect    flameshot gui
 
 set $ws1 1:TTY
 set $ws2 2:WEB
