--- a/.config/sway/config.d/20-io.conf
+++ b/.config/sway/config.d/20-io.conf
@@ -1,7 +1,6 @@
 input type:keyboard {
     xkb_layout      "us"
     xkb_variant     "altgr-intl"
-    xkb_numlock     "enable"
 }
 
 input type:pointer {
@@ -18,5 +17,5 @@ output {
     eDP-1 position 0    0
     DP-3  position 1920 0
     DP-2  position 3840 0
-    *     bg $wallpapers/landscape.png fill
+    *     bg $wallpapers/mount_cook.jpg fill
 }
