--- a/.config/sway/config.d/40-hotkeys.conf
+++ b/.config/sway/config.d/40-hotkeys.conf
@@ -11,17 +11,15 @@
     # Hotkeys
     bindsym --locked XF86AudioRaiseVolume    exec set-vol +5
     bindsym --locked XF86AudioLowerVolume    exec set-vol -5
-    bindsym --locked XF86AudioMute           exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-    bindsym --locked Ctrl+XF86AudioMute      exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+    bindsym --locked XF86AudioMute           exec set-vol m
+    bindsym --locked Ctrl+XF86AudioMute      exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
     bindsym --locked XF86AudioPlay           exec playerctl play-pause
     bindsym --locked XF86AudioPrev           exec playerctl previous
     bindsym --locked XF86AudioNext           exec playerctl next
-    bindsym --locked Ctrl+Insert             exec playerctl play-pause
-    bindsym --locked Ctrl+Prior              exec playerctl previous
-    bindsym --locked Ctrl+Next               exec playerctl next
     bindsym --locked Ctrl+F4                 input type:touchpad events toggle
     bindsym --locked XF86MonBrightnessUp     exec set-light +10
     bindsym --locked XF86MonBrightnessDown   exec set-light -10
+    bindsym XF86_Calculator                  exec $term -epython
 
     # Kill focused window
     bindsym $mod+Shift+c kill
@@ -49,8 +47,8 @@
     bindsym $mod+Shift+$right   move right
 
     # Move the focused workspace with the same, but add Control
-    bindsym $mod+Control+$down move workspace to left
-    bindsym $mod+Control+$up   move workspace to right
+    bindsym $mod+comma  move workspace to left
+    bindsym $mod+period  move workspace to right
 
 ## Workspaces:
     # Switch to workspace
