--- a/.config/sway/config.d/30-startup.conf
+++ b/.config/sway/config.d/30-startup.conf
@@ -13,5 +13,8 @@ exec swayidle -w                                           \
 
 bar swaybar_command waybar
 
-exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1       # arch
+#exec /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 # debian
+#exec /usr/libexec/polkit-gnome-authentication-agent-1 &             # fedora
+
 exec gammastep
