fix: sway config

--- a/.config/sway/config.d/10-variables.conf
+++ b/.config/sway/config.d/10-variables.conf
@@ -5,7 +5,7 @@ set $down  k
 set $up    j
 set $right l
 
-set $menu               dmenu_run | xargs swaymsg exec --
+set $menu               dmenu_path | dmenu | xargs swaymsg exec --
 set $term               alacritty
 set $browser            firefox
 set $private_browser    firefox --private-window
@@ -15,6 +15,7 @@ set $lock               swaylock -F -f -i $wallpapers/lock.png
 set $screenshot         flameshot full -c
 set $screenshot_rect    flameshot gui
 
+# 1: to fix order
 set $ws1 1:TTY
 set $ws2 2:WEB
 set $ws3 3:DEV
@@ -30,3 +31,5 @@ client.focused  #4c7899     #285577     #ffffff     #2e9ef4     #e00000
 default_border pixel
 
 set $screen_timeout 600
+
+# vim: ft=swayconfig
