--- a/.config/sway/config.d/30-startup.conf
+++ b/.config/sway/config.d/30-startup.conf
@@ -11,10 +11,12 @@ exec swayidle -w                                           \
                      resume 'swaymsg "output * dpms on"'   \
     before-sleep "$lock"
 
-bar swaybar_command waybar
+#bar swaybar_command waybar
 
-exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1       # arch
-#exec /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 # debian
+#exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1      # arch
+exec /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 # debian
 #exec /usr/libexec/polkit-gnome-authentication-agent-1 &             # fedora
 
 exec gammastep
+
+# vim: ft=swayconfig
